--- a/css/main.css
+++ b/css/main.css
@@ -514,40 +514,152 @@ input[type='submit'] {
   -webkit-border-radius: 0;
   cursor: pointer; }
 
-body{
-  font:14px / 18px Arial,sans-serif;
+@font-face {
+  font-family: 'latoblack';
+  src: url("../fonts/lato-black.eot");
+  src: url("../fonts/lato-black.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-black.woff2") format("woff2"), url("../fonts/lato-black.woff") format("woff"), url("../fonts/lato-black.ttf") format("truetype"), url("../fonts/lato-black.svg#latoblack") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'latobold';
+  src: url("../fonts/lato-bold.eot");
+  src: url("../fonts/lato-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-bold.woff2") format("woff2"), url("../fonts/lato-bold.woff") format("woff"), url("../fonts/lato-bold.ttf") format("truetype"), url("../fonts/lato-bold.svg#latobold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'latolight';
+  src: url("../fonts/lato-light.eot");
+  src: url("../fonts/lato-light.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-light.woff2") format("woff2"), url("../fonts/lato-light.woff") format("woff"), url("../fonts/lato-light.ttf") format("truetype"), url("../fonts/lato-light.svg#latolight") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'latomedium';
+  src: url("../fonts/lato-medium.eot");
+  src: url("../fonts/lato-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-medium.woff2") format("woff2"), url("../fonts/lato-medium.woff") format("woff"), url("../fonts/lato-medium.ttf") format("truetype"), url("../fonts/lato-medium.svg#latomedium") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'latoregular';
+  src: url("../fonts/lato-regular.eot");
+  src: url("../fonts/lato-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-regular.woff2") format("woff2"), url("../fonts/lato-regular.woff") format("woff"), url("../fonts/lato-regular.ttf") format("truetype"), url("../fonts/lato-regular.svg#latoregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'latosemibold';
+  src: url("../fonts/lato-semibold.eot");
+  src: url("../fonts/lato-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-semibold.woff2") format("woff2"), url("../fonts/lato-semibold.woff") format("woff"), url("../fonts/lato-semibold.ttf") format("truetype"), url("../fonts/lato-semibold.svg#latosemibold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+html {
+  height: 100%; }
+
+body {
+  color: #000;
+  font:14px/18px Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 a {
   text-decoration: none;
-  outline: none; }
-
-.image-uploader{
-  padding:30px;
+  outline: none;
 }
-.image-uploader #upload-image{
-  display:block;
-  margin:0 0 20px;
+
+h2{
+  font-size: 18px;
+  line-height: 24px;
+}
+.image-uploader-form{
+  padding: 20px;
+}
+.image-uploader{
+  border: 1px solid #000;
+  margin: 10px 0;
+  border-radius: 3px;
+  padding: 5px;
 }
 .drop-area{
-  min-height:150px;
-  border:2px dashed #ccc;
-  margin:0 0 20px;
-  position:relative;
+  margin: 5px;
+  padding: 5px;
+  border: 3px dashed #ccc;
+  min-height: 150px;
+  background: #f4f4f4;
 }
-.drop-area:after{
-  content:'drop images here';
-  position:absolute;
-  z-index: -1;
-  top:50%;
-  left:50%;
-  color:#ccc;
-  transform: translate(-50%, -50%);
+.submit{
+  border: none;
+  padding: 10px 20px;
+  color: #fff;
+  text-transform: uppercase;
+  background: #5468f9;
 }
-.image-uploader [type="submit"] {
-  border:none;
-  padding:5px;
-  background:#000;
-  color:#fff;
-  width:100px;
+.thumb{
+  display: inline-block;
+  vertical-align: top;
+  margin: 5px;
+  box-shadow: 0 0 5px #000;
+  position: relative;
+  overflow: hidden;
+}
+.thumb.file{
+  border: 3px dashed #ccc;
+  height: 100px;
+  width: 100px;
+}
+.thumb.file:before{
+  content:"+";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 40px;
+  line-height: 40px;
+  margin: -19px 0 0 -11px;
+  color: #ccc;
+}
+.thumb.file input{
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 200px;
+  line-height: 200px;
+  cursor: pointer;
+}
+
+.thumb img,
+.thumb canvas{display: block;}
+.thumb .remove{
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 20px;
+  height: 20px;
+  width: 20px;
+  border: none;
+  background: #5468f9;
+  color: #fff;
+  padding: 0;
+  margin: 0;
+}
+
+input.upload-image.btn{
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  font-size: 200px;
+  line-height: 200px;
+}
+
+.upload-btn{
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px 20px;
+  color: #fff;
+  text-transform: uppercase;
+  background: #5468f9;
+  overflow: hidden;
 }
