--- a/css/main.css
+++ b/css/main.css
@@ -663,3 +663,23 @@ input.upload-image.btn{
   background: #5468f9;
   overflow: hidden;
 }
+.progress{
+  display: block;
+  width: 300px;
+  height: 30px;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #000;
+}
+.progress span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #5468f9;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+  line-height: 30px;
+}
